Added champion mastery statistics.

--- a/lolbyte.html
+++ b/lolbyte.html
@@ -85,7 +85,7 @@
                     <div id="playerStatsList"></div>
                 </div>
                 <div class="rankedStats">
-                    <p id="rankedStatsLabel">Ranked Statistics</p>
+                    <p id="rankedStatsLabel">Champion Statistics</p>
                     <div id="rankedStatsList"></div>
                 </div>
                 <div class="leagueStats">
