Fix search button displacement issue

--- a/lolbyte.html
+++ b/lolbyte.html
@@ -38,7 +38,7 @@
                     <option value="TR">TR</option>
                     <option value="RU">RU</option>
                 </select>
-                <a href="#"><div id="searchButton"><p>search</p></div></a>
+                <a href="#" id="anchorSearchButton"><div id="searchButton"><p>search</p></div></a>
                 <a href="#"><img id="alertButton" src="img/assets/alertButton.png" alt="alertButton"></a>
                 <a href="#"><img id="feedbackButton" src="img/assets/feedbackButton.png" alt="feedbackButton"></a>
                 <a href="#"><img id="donationButton" src="img/assets/donationButton.png" alt="donationButton"></a>
