Revert nonranked stat changes

--- a/lolbyte.html
+++ b/lolbyte.html
@@ -80,7 +80,7 @@
             </div>
             <div class="statsPage">
                 <div class="playerStats">
-                    <p id="playerStatsLabel">Ranked Statistics</p>
+                    <p id="playerStatsLabel">Player Statistics</p>
                     <div id="playerStatsList"></div>
                 </div>
                 <div class="championStats">
