--- a/lolbyte.html
+++ b/lolbyte.html
@@ -99,6 +99,7 @@
         <script src="lib/jquery-3.2.1.min.js"></script>
         <script src="lib/owl.carousel/owl.carousel.min.js"></script>
         <script src="lib/qtip/jquery.qtip.min.js"></script>
+        <script src='lib/jquery.keyframes.min.js'></script>
         <script src="js/localStorage.js"></script>
         <script src="js/utility.js"></script>
         <script src="js/system.js"></script>
