--- a/lolbyte.html
+++ b/lolbyte.html
@@ -38,9 +38,9 @@
                     <option value="RU">RU</option>
                 </select>
                 <a href="#" id="anchorSearchButton"><div id="searchButton"><p>search</p></div></a>
-                <a href="#"><img id="alertButton" src="img/assets/alertButton.png" alt="alertButton"></a>
-                <a href="#"><img id="feedbackButton" src="img/assets/feedbackButton.png" alt="feedbackButton"></a>
-                <a href="#"><img id="donationButton" src="img/assets/donationButton.png" alt="donationButton"></a>
+                <a href="#"><img id="alertButton" src="img/assets/alertButton.png" title="Notifications" alt="alertButton"></a>
+                <a href="#"><img id="feedbackButton" src="img/assets/feedbackButton.png" title="Leave Feedback" alt="feedbackButton"></a>
+                <a href="#"><img id="donationButton" src="img/assets/donationButton.png" title="Donations" alt="donationButton"></a>
                 <img id="lolbyteLogo" src="img/assets/logo.png" alt="lolbyteLogo">
             </div>
             <div class="alertPage"></div>
