--- a/lolbyte.html
+++ b/lolbyte.html
@@ -36,6 +36,7 @@
                     <option value="OCE">OCE</option>
                     <option value="TR">TR</option>
                     <option value="RU">RU</option>
+                    <option value="JP">JP</option>
                 </select>
                 <a href="#" id="anchorSearchButton"><div id="searchButton"><p>search</p></div></a>
                 <a href="#"><img id="alertButton" src="img/assets/alertButton.png" title="Notifications" alt="alertButton"></a>
@@ -100,6 +101,13 @@
         <script src="lib/owl.carousel/owl.carousel.min.js"></script>
         <script src="lib/qtip/jquery.qtip.min.js"></script>
         <script src='lib/jquery.keyframes.js'></script>
+        <script type="text/javascript">
+            (function(t,l){
+                let w=window,d=document,s=d.createElement('script'),f=d.getElementsByTagName('script')[0];
+                w[t]=w[t]||function(){(w["_rgea"]=w["_rgea"]||[["uts",new Date()]]).push(Array.prototype.slice.call(arguments));w.RGEA&&w.RGEA.p();};
+                s.type='text/javascript'; s.async=true; s.defer=true; s.src=l; f.parentNode.insertBefore(s,f);
+            })("rgea", "https://static.developer.riotgames.com/js/rgea.min.js");
+        </script>
         <script src="js/localStorage.js"></script>
         <script src="js/utility.js"></script>
         <script src="js/system.js"></script>
