Add banned champions and queue type selector

--- a/lolbyte.html
+++ b/lolbyte.html
@@ -76,7 +76,11 @@
                 </div>
                 <div class="recentGames">
                     <span id="recentGamesLabel">Recent Games</span>
-                    <a id="wrapRankedToggleButton" href="#"></a>
+                    <select id="recentGamesType">
+                        <option value="0">All</option>
+                        <option value="420">Ranked</option>
+                        <option value="700">Clash</option>
+                    </select>
                 </div>
             </div>
             <div class="statsPage">
