Update to new APIs

--- a/lolbyte.html
+++ b/lolbyte.html
@@ -55,6 +55,7 @@
                     <div id="summonerList"></div>
                 </div>
             </div>
+            <div class="loader"></div>
             <div class="summonerNotFoundPage">
                 <a href="#"><img id="homeButton2" src="img/assets/homeButton.png" alt="homeButton"></a>
                 <a href="#"><img id="backButton2" src="img/assets/backButton.png" alt="backButton"></a>
